--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "cos-js-sdk-v5": "^1.2.5",
+    "echarts": "^5.0.2",
     "element-ui": "2.13.2",
     "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
@@ -24,6 +25,7 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "qrcode": "^1.4.4",
+    "screenfull": "^5.1.0",
     "vue": "2.6.10",
     "vue-print-nb": "^1.6.0",
     "vue-router": "3.0.6",
